# deprotocol

./: .gitignore  Dockerfile  LICENSE  README.md  behave.ini  deprotocol.rc  docker-compose.yml  fancy_app.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  python-app.yml
application/: main.py  settings.py
application/api/: client.py
application/app/: application.py  de_app.py
application/app/setup/: console_setup.py  logger_setup.py  p2p_setup.py  setup.py  tor_setup.py
application/console/: shell.py  simple_console.py
application/logger/: logger.py
application/network/: tor_network.py
application/p2p/: __init__.py  crypto_funcs.py  deprecated_node.py  file_transfer.py  node.py  node_connection.py  pinger.py  portforwardlib.py  proxied_socket.py
application/peering/: peer.py
application/protocol/: __init__.py  packet_decoder.py  packet_encoder.py  packet_factory.py  packet_handler.py  packet_receiver.py  packet_sender.py  type.py
application/router/: upnp_discover.py
application/tor/: tor_client.py
application/utils/: crypto_funcs.py  portforwardlib.py  tor_utils.py
chat/: tor_chat.py
logger/: logger.py
network/: tor_network.py
p2p/: __init__.py  __main__.py  crypto_funcs.py  node.py
peering/: peer.py
src/deprotocol/: __main__.py  settings.py  version.py
src/deprotocol/api/: client.py
src/sample_gui_app/: main.py
test/: __init__.py  conftest.py  main.py
test/features/: communication.feature  environment.py
test/protocol/: test_packet_factory.py  test_packet_handler.py
tor/: tor_client.py
(+117 files in other folders)
