[metadata]
name = deprotocol
version = attr: deprotocol.version.APP_VERSION
author = Joel Otero Martín (werogg)
author_email = supwer00@gmail.com
url = https://github.com/werogg/deprotocol
project_urls =
	Homepage = https://github.com/werogg/deprotocol
	Issues = https://github.com/werogg/deprotocol/issues
description = Peer 2 Peer communication protocol working over Tor Network
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tor, protocol, deprotocol, setuptools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX

[options]
install_requires =
    charset_normalizer==3.1.0
    pycryptodome==3.17
    Requests==2.28.2
    PySocks==1.7.1
    stem==1.8.1
    tqdm==4.65.0
    upnpclient==1.0.3
[options.extras_require]
optional_deps =
    behave==1.2.6
    pytest==7.3.1

[options.entry_points]
console_scripts =
    deprotocol = deprotocol.app.main:main

[bdist_wheel]
universal = 1

[bdist]
formats = msi